# gspell-4

./: gspell-text-view.c  meson.build  meson_options.txt
docs/: meson.build  more-information.md
docs/gi-doc/: libgspell.toml.in  meson.build
docs/gtk-doc/: meson.build
docs/reference/: gspell-docs.xml  intro.xml.in  meson.build
docs/reference/xml/: meson.build
gspell/: gspell-checker-dialog.c  gspell-checker-provider.c  gspell-checker-provider.h  gspell-checker.c  gspell-checker.h  gspell-context-menu.c  gspell-context-menu.h  gspell-enchant-checker.h  gspell-inline-checker-text-buffer.c  gspell-inline-checker-text-buffer.h  gspell-language-chooser-button.c  gspell-menu.c  gspell-menu.h  gspell-navigator-text-view.c  gspell-navigator-text-view.h  gspell-navigator.c  gspell-navigator.h  gspell-region.c  gspell-region.h  gspell-suggestion-menu.c  gspell-suggestion-menu.h  gspell-text-buffer.c  gspell-text-view.c  gspell-text-view.h  gspell-version.h  gspell-version.h.in  gspell.h  meson.build
gspell-app/: gspell-app.c  meson.build
gspell/enchant/: gspell-enchant-checker.c  gspell-enchant-checker.h
gspell/resources/: checker-dialog.ui  language-dialog.ui  meson.build
po/: meson.build
tests/: meson.build  test-checker.c  test-enchant-checker.c  test-entry.c  test-text-view-basic.c  test-text-view.c
testsuite/: test-inline-checker-text-buffer.c
