option('demo',
       type: 'boolean', value: true,
       description: 'Build demo app')
option('tests',
       type: 'boolean', value: true,
       description: 'Build tests (requires umockdev)')
option('gtk_doc',
       description: 'Build API reference for GSPELL using GTK-Doc',
       type: 'boolean',
       value: true)
option('gi_doc',
       description: 'Build API reference for GSPELL using GI-Docgen',
       type: 'boolean',
       value: true)
option('vapi',
       type: 'boolean', value: true,
       description: 'Generate vapi data (requires vapigen).')
option('introspection',
       description: 'Whether to build introspection files',
       type: 'boolean',
       value: true)